[project]
name = "cnairgapper"
description = "A cloud-native airgapper tool for syncing resources"
dynamic = ["version"]
authors = [
    { name = "Daniel Drack", email = "daniel.drack@fullstacks.eu" }
]
requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "airgap",
    "sync",
    "git",
    "image",
    "helm",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
urls = { Homepage = "https://github.com/fullstacks-gmbh/universal-airgapper" }
dependencies = [
    "requests~=2.32.3",
    "configargparse~=1.7",
    "PyYAML~=6.0.2",
    "jsonschema~=4.23.0",
    "GitPython~=3.1.44",
    "pydantic~=2.10.6",
    "annotated-types==0.7.0",
]

# This creates a console command named `hello`
[project.scripts]
cnairgapper = "cnairgapper.main:main"

[build-system]
requires = [
    "hatchling>=1.27.0",
    "hatch-vcs>=0.4",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

# [tool.hatch.build.hooks.vcs]
# version-file = "src/cnairgapper/_version.py"

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "pyproject.toml"]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "requests_mock==1.12.1",
    "pylint==3.3.3",
    "ruff>=0.12.12",
    "pre-commit>=4.3.0",
    "hatchling>=1.27.0",
    "hatch-vcs>=0.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "B",    # bugbear
    "C",    #
    "D",    # pydocstyle
    "E",    # pycodestyle error
    "F",    # pyflakes
    "N",    # naming
    "S",    # bandit
    "C90",  # maccabe
    "PL",   # pylint
    "I",    # isort
    "TRY",  # exception handling
    "RUF",  # ruff specific
    "UP",    # pyupgrade
]
exclude = [
    ".git",
    ".venv",
    ".vscode"
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in `__init__`
    "D205", # 1 blank line required between summary line and description
    "TRY003", # Avoid specifying long messages outside the exception class
    "PLR0913", # Too many arguments in function definition (>5)
    "C901", # is too complex (> 10)
    "PLR0912", # too many brancher (>12)
    "PLR2004", #  Magic value used in comparison, consider replacing `x` with a constant variable
    # "TRY401", #
    "S108", #  Probable insecure usage of temporary file or directory
    "S603", # `subprocess` call: check for execution of untrusted input
]

[tool.ruff.lint.isort]
known-third-party = ["pytest"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pep8-naming]
classmethod-decorators = []

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
    "S105", # Pseudo token
    "S106", # Pseudo passwords
]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--strict-markers"
pythonpath = "src/"
testpaths = [
    "tests"
]

[tool.hatch.build.targets.wheel]
packages = ["src/cnairgapper"]  # import package (underscores)
